# internal/api/router.go
@@ -22,6 +22,7 @@ func NewRouter(state *state.Manager, influxDB *storage.InfluxDBClient, paramsSto
 	mux.HandleFunc("GET /api/version", handler.GetVersion)
 	mux.HandleFunc("GET /api/energy/consumed", handler.GetEnergyConsumed)
 	mux.HandleFunc("GET /api/energy/sold", handler.GetEnergySold)
+	mux.HandleFunc("GET /api/energy/cost", handler.GetEnergyCost)
 	mux.HandleFunc("GET /health", handler.HealthCheck)
 
 	// Parameter routes
